# meer21cm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTORS.rst  DEVELOPING.md  INSTALLATION.md  README.md  REAME.md  pyproject.toml  setup.py
.github/workflow/: python-package.yml
.github/workflows/: python-package.yml
docs/source/: conf.py  cookbook.rst  develop.rst  examples.rst  index.rst  installation.rst  meer21cm.data.rst  meer21cm.rst  meerstack.data.rst  meerstack.rst  modules.rst
docs/source/_autosummary/: meerstack.mock.rst  meerstack.stack.rst  meerstack.util.rst
docs/source/cookbook/: 2019_Lband.ipynb  2021_Lband_gama_cross.ipynb  mode_mixing.ipynb  obs_effect_model.ipynb  resolution.ipynb  survey_dimension.ipynb  weights.ipynb
docs/source/examples/: busy_week_1.ipynb  busy_week_2.ipynb  custom_survey.ipynb  gama_cross.ipynb  log.ipynb  quick_start.ipynb
examples/: gama_cross.ipynb
papers/validation/: README.md  func_00.py  func_01.py  run_00.ipynb  run_01.ipynb
src/meer21cm/: __init__.py  cosmology.py  dataanalysis.py  fg.py  grid.py  inference.py  io.py  mock.py  pipeline.py  plot.py  power.py  stack.py  telescope.py  transfer.py  util.py
src/meer21cm/data/: test.pickle  test_dict.pkl  test_gal.fits
src/meerstack/: fg.py  mock.py  stack.py  util.py
src/meerstack/data/: gdsm16_1ghz.fits  gdsm16_1ghz_jy.fits  meerkat_nu_4k.npy  test_fits.fits  test_nu.npy
tests/: conftest.py  test_cosmology.py  test_dataanalysis.py  test_fg.py  test_fit2.h5  test_grid.py  test_inference.py  test_io.py  test_meerpower_import.py  test_mock.py  test_pipeline.py  test_plot.py  test_power.py  test_stack.py  test_telescope.py  test_transfer.py  test_util.py
