[build-system]
requires = ["setuptools>=43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meer21cm"
version = "0.1.0"
authors = [
  { name="Zhaoting Chen", email="ztchenustc@gmail.com" },
]
description = "A package for 21cm intensity mapping data analysis with MeerKLASS"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # due to halomod dependency
    "numpy < 2.0",
    'scipy < 1.14',
    "hiimtool@git+https://github.com/zhaotingchen/hiimtool",
    "healpy",
    "matplotlib",
    "astropy",
    'hmf',
    'halomod',
    'powerbox@git+https://github.com/zhaotingchen/powerbox ; python_version >= "3.9"',
    "cython < 0.29.26",
    "mpi4py",
    "mpsort",
    "pfft-python",
    "pmesh",
]


[project.urls]
Homepage = "https://github.com/zhaotingchen/meer21cm"
Issues = "https://github.com/zhaotingchen/meer21cm/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "black",
    "flake8",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
]
full = ["meer21cm[test]","meer21cm[lint]","meer21cm[docs]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
